RESOLVED FIXED65853
[EFL] Return from _ewk_view_smart_add if smart data can not be allocated
https://bugs.webkit.org/show_bug.cgi?id=65853
Summary [EFL] Return from _ewk_view_smart_add if smart data can not be allocated
Grzegorz Czajkowski
Reported 2011-08-08 06:08:53 PDT
This patch prevents crash when malloc fails for sd structure. As you can see, only return statement in _ewk_view_smart_add wasn't enough. To display an empty window (without view) others NULL checks were needed. I tested the patch on both the backing stores. We should be aware that these checks may influence on performance. Anyway this defect has been marked as one of important bugs in WebKit-EFL. What is your opinion about that?
Attachments
proposed patch (4.45 KB, patch)
2011-08-08 06:10 PDT, Grzegorz Czajkowski
no flags
Grzegorz Czajkowski
Comment 1 2011-08-08 06:10:10 PDT
Created attachment 103237 [details] proposed patch
Leandro Pereira
Comment 2 2011-08-08 07:44:49 PDT
Comment on attachment 103237 [details] proposed patch Informal r+.
Gyuyoung Kim
Comment 3 2011-08-08 17:35:11 PDT
Comment on attachment 103237 [details] proposed patch LGTM also.
Leandro Pereira
Comment 4 2011-08-09 07:06:40 PDT
*** Bug 65408 has been marked as a duplicate of this bug. ***
Kenneth Rohde Christiansen
Comment 5 2011-08-09 07:35:51 PDT
Comment on attachment 103237 [details] proposed patch LGTM
Gyuyoung Kim
Comment 6 2011-08-10 17:42:42 PDT
Comment on attachment 103237 [details] proposed patch LGTM.
WebKit Review Bot
Comment 7 2011-08-10 17:54:54 PDT
Comment on attachment 103237 [details] proposed patch Clearing flags on attachment: 103237 Committed r92808: <http://trac.webkit.org/changeset/92808>
WebKit Review Bot
Comment 8 2011-08-10 17:54:59 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.