[EFL] Return from _ewk_view_smart_add if smart data can not be allocated https://bugs.webkit.org/show_bug.cgi?id=65853

Patch by Grzegorz Czajkowski <g.czajkowski@samsung.com> on 2011-08-10
Reviewed by Kenneth Rohde Christiansen.

It prevents the crash while allocating a memory for view's smart data.
Others checking are needed for support single and tiled backing store.
As a result an empty window will be displayed.

* ewk/ewk_view.cpp:
(_ewk_view_smart_add):
(_ewk_view_smart_resize):
(_ewk_view_smart_move):
(_ewk_view_smart_show):
(_ewk_view_smart_hide):
* ewk/ewk_view_single.c:
(_ewk_view_single_smart_add):
(_ewk_view_single_smart_resize):
* ewk/ewk_view_tiled.c:
(_ewk_view_tiled_smart_add):

Canonical link: https://commits.webkit.org/81882@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92808 268f45cc-cd09-0410-ab3c-d52691b4dbfc